2001-03-09  Benjamin Chelf  <chelf@codesourcery.com>

	* qm/track/diagnostics.txt: Add new error messages.
	* qm/track/cmdline.py: Fixed formatting for raising errors.

2001-03-05  Alex Samuel  <samuel@codesourcery.com>

	* qm/track/web/show.py (handle_submit): Format error messages.
	* qm/track/server.py (start_server): Handle address in use errors.
	(execute): Issue diagnostics.
	* qm/track/issue_class.py: Use diagnostics throughout.
	(IssueFieldText.Validate): Convert from DOS text.
	* qm/track/diagnostics.txt: New file.
	* qm/track/config.py (__diagnostics): New variable.
	(diagnostic): New function.
	(error): Likewise.
	(warning): Likewise.
	* qm/track/cmdline.py (Command.__PerformDestroy): Handle lock error.

	* qm/web.py (AddressInUseError): New class.
	(WebServer.Bind): Raise it.
	(escape): Reimplement.
	(__entity_regex): New variable.
	(__replacement_for_entity): New function.
	(unescape): New function.
	(format_structured_text): Reimplement.
	* qm/diagnostic.py: New file.
	* qm/structured_text.py: Likewise.
	* qm/common.py (FileSystemMutex.GetPath): New method.
	(MapReplacer): New class.
	(replace_by_map): New function.
	(convert_from_dos_text): Likewise.

2001-03-01  Alex Samuel  <samuel@codesourcery.com>

	* README: Adjust tutorial.
	* qm/track/web/web.py (PageInfo.GenerateStartBody): Adjust
	navigation bar. 
	* qm/track/config.py (setup_idb_for_test): Ajust titles.
	* qm/track/issue_class.py (IssueClass.__init__): Likewise.
	* qm/track/cmdline.py (Command.__PrintResults): Add full format
	style.

2001-03-01  Alex Samuel  <samuel@codesourcery.com>

	* README: Update.
	* qm/web.py (WebRequestHandler.__HandleScriptRequest): Handle
	SystemExit. 
	(WebServer.__init__): Initialize __shutdown_requested.
	(WebServer.Run): Run until shutdown request.
	(WebServer.RequestShutdown): New method.
	* qm/common.py (remove_directory_recursively): New function.
	* qm/track/web/templates/show.dtml: Use field title.